# BPU_triton_backend

./: .gitignore  CLAUDE.md  MANIFEST.md  README.md  run_realtime_yolo.sh  stop_services.sh  verify_all.sh
bpu_backend/: CMakeLists.txt
bpu_backend/include/bpu_backend/: bpu_model.h  bpu_runner_args.h  bpu_runtime.h  bpu_status.h  bpu_tensor.h
bpu_backend/src/: bpu_model.cc  bpu_runner_args.cc  bpu_runtime.cc  bpu_tensor.cc  triton_backend.cc
bpu_backend/tests/: test_bpu_model.cc  test_bpu_runner_args.cc  test_bpu_runner_behavior.cc  test_bpu_runner_config_stdout.cc  test_bpu_runtime.cc  test_bpu_tensor.cc  test_config_template.cc
bpu_backend/tools/: bpu_runner.cc
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  IMPLEMENTATION_NOTES.md  PROJECT_SUMMARY.md  TESTING.md  backend_platform_support_matrix.md  bpu_backend_build.md  realtime_validation_harness_design.md  triton_server_on_rdk_s100p.md
examples/realtime_yolo/: README.md  frame_source.py  run_usb_yolov5x_web.py  test_frame_source.py  test_run_usb_yolov5x_web.py  test_triton_http.py  test_web_stream.py  test_yolov5x_adapter.py  triton_http.py  web_stream.py  yolov5x_adapter.py
examples/yolov5x/: README.md  config.pbtxt  make_symlink.sh  prepare_input.py
examples/yolov5x/model_repository/yolov5x_bpu/1/: model.hbm
scripts/triton_e2e/: build_no_gpu_stubs.sh  infer_yolov5x_http.py  start_bpu_triton.sh  stop_bpu_triton.sh
tests/: test_package_scripts.py
